build-output.txt
   Compiling proc-macro2 v1.0.103
   Compiling unicode-ident v1.0.22
   Compiling quote v1.0.42
   Compiling autocfg v1.5.0
   Compiling windows-link v0.2.1
   Compiling syn v1.0.109
   Compiling libm v0.2.15
   Compiling cfg-if v1.0.4
   Compiling serde_core v1.0.228
   Compiling rustversion v1.0.22
   Compiling equivalent v1.0.2
   Compiling hashbrown v0.16.1
   Compiling memchr v2.7.6
   Compiling toml_datetime v0.6.11
   Compiling winnow v0.5.40
   Compiling once_cell v1.21.3
   Compiling bitflags v2.10.0
   Compiling thiserror v1.0.69
   Compiling paste v1.0.15
   Compiling windows-sys v0.61.2
   Compiling serde v1.0.228
   Compiling parking_lot_core v0.9.12
   Compiling version_check v0.9.5
   Compiling winapi v0.3.9
   Compiling typenum v1.19.0
   Compiling num-traits v0.2.19
   Compiling glob v0.3.3
   Compiling generic-array v0.14.7
   Compiling indexmap v2.12.1
   Compiling crc32fast v1.5.0
   Compiling semver v1.0.27
   Compiling find_cuda_helper v0.2.0
   Compiling smallvec v1.15.1
   Compiling itoa v1.0.15
   Compiling simd-adler32 v0.3.7
   Compiling scopeguard v1.2.0
   Compiling rustc_version v0.4.1
   Compiling lock_api v0.4.14
   Compiling wasm-bindgen-shared v0.2.106
   Compiling regex-syntax v0.8.8
   Compiling shlex v1.3.0
   Compiling find-msvc-tools v0.1.5
   Compiling lazy_static v1.5.0
   Compiling unicode-xid v0.2.6
   Compiling heck v0.5.0
   Compiling fnv v1.0.7
   Compiling failure_derive v0.1.8
   Compiling adler2 v2.0.1
   Compiling strsim v0.11.1
   Compiling syn v2.0.111
   Compiling toml_edit v0.19.15
   Compiling ident_case v1.0.1
   Compiling cc v1.2.49
   Compiling miniz_oxide v0.8.9
   Compiling parking_lot v0.12.5
   Compiling chrono v0.4.42
   Compiling vek v0.15.10
   Compiling aho-corasick v1.1.4
   Compiling byteorder v1.5.0
   Compiling unicode-segmentation v1.12.0
   Compiling thiserror v2.0.17
   Compiling windows_x86_64_msvc v0.53.1
   Compiling regex v0.2.11
   Compiling ucd-util v0.1.10
   Compiling pkg-config v0.3.32
   Compiling rustc-demangle v0.1.26
   Compiling ryu v1.0.20
   Compiling convert_case v0.10.0
   Compiling crossterm_winapi v0.9.1
   Compiling proc-macro-crate v1.3.1
   Compiling backtrace v0.3.76
   Compiling is-terminal v0.4.17
   Compiling regex-syntax v0.5.6
   Compiling flate2 v1.1.7
   Compiling thread_local v0.3.6
   Compiling cust_raw v0.11.3
   Compiling aho-corasick v0.6.10
   Compiling allocator-api2 v0.2.21
   Compiling onig_sys v69.9.1
   Compiling num-integer v0.1.46
   Compiling approx v0.5.1
   Compiling synstructure v0.12.6
   Compiling regex-automata v0.4.13
   Compiling ucd-trie v0.1.7
   Compiling anstyle v1.0.13
   Compiling powerfmt v0.2.0
   Compiling libc v0.2.178
   Compiling utf8-ranges v1.0.5
   Compiling semver-parser v0.7.0
   Compiling foldhash v0.1.5
   Compiling once_cell_polyfill v1.70.2
   Compiling instability v0.3.10
   Compiling bytemuck v1.24.0
   Compiling utf8parse v0.2.2
   Compiling either v1.15.0
   Compiling semver v0.9.0
   Compiling anstyle-parse v0.2.7
   Compiling hashbrown v0.15.5
   Compiling anstyle-wincon v3.0.11
   Compiling toml v0.4.10
   Compiling colored v1.9.4
   Compiling deranged v0.5.5
   Compiling itertools v0.13.0
   Compiling pest v2.8.4
   Compiling glam v0.20.5
   Compiling pxfm v0.1.27
   Compiling block-buffer v0.10.4
   Compiling num_enum_derive v0.5.11
   Compiling cust_derive v0.2.0
   Compiling crypto-common v0.1.7
   Compiling castaway v0.2.4
   Compiling fdeflate v0.3.7
   Compiling darling_core v0.20.11
   Compiling failure v0.1.8
   Compiling cust v0.3.2
   Compiling anstyle-query v1.1.5
   Compiling winapi-util v0.1.11
   Compiling unicode-width v0.1.14
   Compiling base64 v0.22.1
   Compiling mint v0.5.9
   Compiling anyhow v1.0.100
   Compiling num-conv v0.1.0
   Compiling litrs v1.0.0
   Compiling num_enum v0.5.11
   Compiling is_terminal_polyfill v1.70.2
   Compiling time-core v0.1.6
   Compiling unicode-width v0.2.0
   Compiling static_assertions v1.1.0
   Compiling serde_json v1.0.145
   Compiling indoc v2.0.7
   Compiling colorchoice v1.0.4
   Compiling bit-vec v0.6.3
   Compiling anstream v0.6.21
   Compiling compact_str v0.8.1
   Compiling ptx-builder v0.5.3
   Compiling time v0.3.44
   Compiling unicode-truncate v1.1.0
   Compiling bit-set v0.5.3
   Compiling document-features v0.2.12
   Compiling same-file v1.0.6
   Compiling pest_meta v2.8.4
   Compiling png v0.18.0
   Compiling digest v0.10.7
   Compiling lru v0.12.5
   Compiling windows-targets v0.53.5
   Compiling crossterm v0.28.1
   Compiling quick-xml v0.38.4
   Compiling clap_lex v0.7.6
   Compiling byteorder-lite v0.1.0
   Compiling bitflags v1.3.2
   Compiling cassowary v0.3.0
   Compiling cust_core v0.1.1
   Compiling cpufeatures v0.2.17
   Compiling thiserror-impl v1.0.69
   Compiling serde_derive v1.0.228
   Compiling thiserror-impl v2.0.17
   Compiling strum_macros v0.26.4
   Compiling derive_more-impl v2.1.0
   Compiling error-code v3.3.2
   Compiling linked-hash-map v0.5.6
   Compiling pest_generator v2.8.4
   Compiling yaml-rust v0.4.5
   Compiling clipboard-win v5.4.1
   Compiling sha2 v0.10.9
   Compiling bstr v1.12.1
   Compiling derive_more v2.1.0
   Compiling fancy-regex v0.13.0
   Compiling regex v1.12.2
   Compiling rune-format v0.0.1 (X:\_Repos\toon-rune)
   Compiling crossterm v0.29.0
   Compiling clap_derive v4.5.49
   Compiling clap_builder v4.5.53
   Compiling darling_macro v0.20.11
   Compiling windows-sys v0.60.2
   Compiling walkdir v2.5.0
   Compiling fory-core v0.13.2
   Compiling darling v0.20.11
   Compiling bumpalo v3.19.0
   Compiling log v0.4.29
   Compiling strum v0.26.3
   Compiling rustc-hash v1.1.0
   Compiling wasm-bindgen-macro-support v0.2.106
   Compiling tiktoken-rs v0.9.1
   Compiling comfy-table v7.2.1
   Compiling rune-curs v0.0.1 (X:\_Repos\toon-rune\rune-curs)
   Compiling ratatui v0.29.0
   Compiling pest_derive v2.8.4
   Compiling wasm-bindgen v0.2.106
   Compiling moxcms v0.7.10
   Compiling onig v6.5.1
   Compiling plist v1.8.0
   Compiling bincode v1.3.3
   Compiling clap v4.5.53
   Compiling rune-hex v0.0.1 (X:\_Repos\toon-rune\rune-hex)
   Compiling wasm-bindgen-macro v0.2.106
   Compiling fory-derive v0.13.2
   Compiling syntect v5.3.0
   Compiling tui-textarea v0.7.0
   Compiling fory v0.13.2
   Compiling hydron-core v0.0.1 (X:\_Repos\toon-rune\hydron-core)
   Compiling image v0.25.9
   Compiling arboard v3.6.1
   Compiling hydron-ffi v0.0.1 (X:\_Repos\toon-rune\hydron-ffi)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `gf8`
   --> src\rune\hydron\values.rs:560:41
    |
560 |                     let result_coords = gf8::gf8_add_simd(a.coords(), b.coords());
    |                                         ^^^ use of unresolved module or unlinked crate `gf8`
    |
    = help: if you wanted to use a crate named `gf8`, use `cargo add gf8` to add it to your `Cargo.toml`
help: consider importing this module
    |
13  + use hydron_core::gf8;
    |

error[E0433]: failed to resolve: use of undeclared type `Gf8`
   --> src\rune\hydron\values.rs:561:35
    |
561 |                     Ok(Value::Gf8(Gf8::new(result_coords)))
    |                                   ^^^ use of undeclared type `Gf8`
    |
help: consider importing one of these structs
    |
13  + use crate::rune::hydron::Gf8;
    |
13  + use hydron_core::Gf8;
    |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `rune-format` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
